--- a/README.org
+++ b/README.org
@@ -1,15 +1,14 @@
-#+title: fluid-sim | Readme
 
-* Table of Contents :TOC:
+* fluid-sim | Readme:TOC:
 - [[#introduction][Introduction]]
 - [[#methodology][Methodology]]
 - [[#conclusion][Conclusion]]
 
 * Introduction
-This project is based on [[https://www.youtube.com/watch?v=rSKMYc1CQHE][Sebastian Lague's "Coding Adventure "]] video on youtube.
+This project is based on [[https://www.youtube.com/watch?v=rSKMYc1CQHE][Sebastian Lague's "Coding Adventure"]] video on youtube.
 
-The video documents his investigation into fluid dynamics, and his following implementations in Unity using C#.
+The video documents his investigation into fluid dynamics, and his following implementation in Unity using C#.
 
-This project is coded in C++, and utilizes RayLib for basic graphical interfacing.
+This project has been developed using C++ and Raylib for basic graphical interfacing
 * Methodology
 * Conclusion
